# linear-algebra

./: .pre-commit-config.yaml  README.md  pyproject.toml
chapters/: 0 - NumPy Primer.ipynb  0 - Preface.md  1 - Vectors.ipynb  2 - Linear Equations.ipynb  5 - Determinants.ipynb  6 - Eigenvalues and Eigenvectors.ipynb
scripts/: clear_and_execute_notebook.ps1  clear_and_execute_notebook.sh
